Criando arquivos de configuração do spring .properties; messages, application, validationMessages

--- a/BackEnd/medicina/src/main/resources/application.properties
+++ b/BackEnd/medicina/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+# IMPORTANTE: esse arquivo será dado pull uma única vez, depois deve ser passado no gitignore
+spring.jpa.database=MYSQL
+spring.datasource.url=jdbc://localhost/apitccsafemind?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+# Colocar o username e password salvos no mysql
+spring.datasource.username=root 
+spring.datasource.password=root
 
+spring.jpa.show-sql=true
+# Definir a porta onde irá rodar na máquina
+server.port=8082
+spring.jackson.deserialization.fail-on-unknown-properties=true
+spring.jackson.date-format=yyyy-MM-dd
