--- a/BackEnd/medicina/src/main/resources/application.properties
+++ b/BackEnd/medicina/src/main/resources/application.properties
@@ -1,12 +1,20 @@
 # IMPORTANTE: esse arquivo será dado pull uma única vez, depois deve ser passado no gitignore
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc://localhost/apitccsafemind?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+
+# IMPORTANTE: esse é o url do seu localhost, onde define para criar o banco se não existir
+spring.datasource.url=jdbc:mysql://localhost/apitccsafemind?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
+
 # Colocar o username e password salvos no mysql
-spring.datasource.username=root 
+spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.show-sql=true
+
 # Definir a porta onde irá rodar na máquina
-server.port=8082
+server.port=8083
+
+# Mostrar as mensagens de deserialização comforme definido nas propriedades
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+# Definir o padrão de formatação da DATA
 spring.jackson.date-format=yyyy-MM-dd
