--- a/BackEnd/medicina/bin/pom.xml
+++ b/BackEnd/medicina/bin/pom.xml
@@ -16,9 +16,15 @@
 
 	<properties>
 		<java.version>1.8</java.version>
+		<maven-jar-plugin.version>3.1.1</maven-jar-plugin.version>
 	</properties>
-
 	<dependencies>
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat -->
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-tomcat</artifactId>
+		    <version>2.2.1.RELEASE</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -53,10 +59,19 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- IMPLEMENTANDO SPRING SECURITY PRIMEIRA CONFIGURAÇÃO MAVEN -->
 		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-test</artifactId>
-			<scope>test</scope>
+		         <groupId>org.springframework.security</groupId>
+		         <artifactId>spring-security-config</artifactId>		         
+		</dependency>
+		<dependency>
+		         <groupId>org.springframework.security</groupId>
+		         <artifactId>spring-security-core</artifactId>		     
+		</dependency>
+		<dependency>
+		         <groupId>org.springframework.security</groupId>
+		         <artifactId>spring-security-web</artifactId>		         
 		</dependency>
 	</dependencies>
 
