--- a/BackEnd/medicina/src/main/resources/application.properties
+++ b/BackEnd/medicina/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:mysql://localhost/apitccsafemind?createDatabaseIfNotE
 
 # Colocar o username e password salvos no mysql
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 
