--- a/BackEnd/medicina/.gitignore
+++ b/BackEnd/medicina/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**
 !**/src/test/**
+
+### Passando o gitignore ###
 /src/main/resources/application.properties
 
 ### STS ###
