--- a/FrontEnd/mindsafe/.gitignore
+++ b/FrontEnd/mindsafe/.gitignore
@@ -29,6 +29,8 @@ speed-measure-plugin*.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.vscode/launch.json
+.vscode/settings.json
 .history/*
 
 # misc
