install dev kit angular
npm i @angular-devkit/build-angular

para quem baixar o projeto e não cosneguir rodar;

--- a/FrontEnd/mindsafe/angular.json
+++ b/FrontEnd/mindsafe/angular.json
@@ -128,5 +128,8 @@
       }
     }
   },
-  "defaultProject": "mindsafe"
+  "defaultProject": "mindsafe",
+  "cli": {
+    "analytics": "1760d8c2-f946-453d-a6c8-84483e45a915"
+  }
 }
