--- a/BackEnd/medicina/pom.xml
+++ b/BackEnd/medicina/pom.xml
@@ -121,7 +121,21 @@
     		<groupId>org.springframework.security</groupId>
     		<artifactId>spring-security-jwt</artifactId>
 		</dependency>
-	</dependencies>
+
+		<!-- https://mvnrepository.com/artifact/javax.mail/javax.mail-api -->
+		<!-- Dependência para enviar emails pelo java -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
