--- a/BackEnd/medicina/bin/src/main/resources/application.properties
+++ b/BackEnd/medicina/bin/src/main/resources/application.properties
@@ -17,4 +17,16 @@ server.port=8083
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 # Definir o padrão de formatação da DATA
-spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
+
+# Define o fuso horário padrão
+spring.jackson.time-zone=America/Sao_Paulo
+
+# Configurar email e protocolo SMTP para Envio de e-mails
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=<suporte.mindsafe.teste@gmail.com>
+spring.mail.password=<projetoestagio2020>
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
